--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,191 @@
-certifi==2020.12.5
-chardet==4.0.0
-click==7.1.2
+aiohttp==3.5.4
+altgraph==0.17
+amqp==2.6.1
+appdirs==1.4.4
+apt-clone==0.2.1
+apturl==0.5.2
+asgiref==3.3.1
+asn1crypto==0.24.0
+async-timeout==3.0.1
+attrs==19.1.0
+autopep8==1.5.4
+Babel==2.5.3
+beautifulsoup4==4.9.0
+billiard==3.6.3.0
+black==20.8b1
+blinker==1.4
+Brlapi==0.7.0
+cached-property==1.5.1
+cachetools==4.2.0
+catfish==1.4.13
+ccsm==0.9.14.1
+ccy==1.1.0
+celery==4.3.0
+certifi==2019.6.16
+cffi==1.12.3
+chardet==3.0.4
+Click==7.0
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.1.6
+colorama==0.4.3
+command-not-found==0.3
+compizconfig-python==0.9.14.1
+configobj==5.0.6
+cryptography==2.7
+cupshelpers==1.0
+cycler==0.10.0
+dbus-python==1.2.16
+defer==1.0.6
+defusedxml==0.6.0
+distro==1.4.0
+Django==3.1.4
+django-cors-headers==3.6.0
+django-filter==2.4.0
+django-guardian==1.1.0b0
+django-oauth-plus==2.2.9
+django-oauth2-provider==0.2.6.1
+django-slack-oauth==1.5.0
+djangorestframework==3.12.2
+dnspython==2.0.0
+docker==4.1.0
+docker-compose==1.25.0
+dockerpty==0.4.1
+docopt==0.6.2
+email-validator==1.1.1
+entrypoints==0.3
 Flask==1.1.2
-Flask-Dance==3.2.0
-idna==2.10
+Flask-CKEditor==0.4.4.1
+Flask-Limiter==1.1.0
+Flask-Login==0.5.0
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+google-api-python-client==1.7.10
+google-auth==1.6.3
+google-auth-httplib2==0.0.3
+google-auth-oauthlib==0.4.2
+googleads==23.0.1
+greenlet==0.4.15
+grpcio==1.16.1
+gunicorn==19.9.0
+httplib2==0.13.1
+idna==2.8
+ifaddr==0.1.6
+importlib-metadata==1.5.0
+importlib-resources==3.3.0
+isodate==0.6.0
 itsdangerous==1.1.0
-Jinja2==2.11.2
+Jinja2==2.10.1
+jsonfield==3.1.0
+jsonschema==3.2.0
+keyring==18.0.1
+kiwisolver==1.3.1
+kombu==4.6.11
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+limits==1.5.1
+louis==3.12.0
+lxml==4.6.2
+Mako==1.1.0
+Markdown==3.1.1
 MarkupSafe==1.1.1
-oauthlib==3.1.0
+matplotlib==3.3.3
+menulibre==2.2.1
+mockupdb==1.8.0
+mongomock==3.21.0
+more-itertools==4.2.0
+msgpack==0.6.2
+mugshot==0.4.2
+multidict==4.5.2
+mypy-extensions==0.4.3
+netifaces==0.10.4
+nose==1.3.7
+numpy==1.19.4
+oauth2==1.9.0.post1
+oauth2client==4.1.3
+oauthlib==3.0.2
+onboard==1.4.1
+packaging==20.3
+pathspec==0.8.0
+pexpect==4.6.0
+Pillow==7.0.0
+prompt-toolkit==3.0.8
+protobuf==3.6.1
+psutil==5.5.1
+pyasn1==0.4.6
+pyasn1-modules==0.2.6
+pycairo==1.16.2
+pycodestyle==2.6.0
+pycparser==2.19
+pycrypto==2.6.1
+pycups==1.9.73
+pycurl==7.43.0.2
+Pygments==2.3.1
+PyGObject==3.36.0
+PyICU==2.4.2
+pyinstaller==4.1
+pyinstaller-hooks-contrib==2020.10
+PyJWT==1.7.1
+pymacaroons==0.13.0
+pymongo==3.9.0
+PyNaCl==1.3.0
+pynvim==0.4.1
+pyOpenSSL==20.0.0
+pyparsing==2.4.6
+pyparted==3.11.2
+pyrsistent==0.15.5
+python-apt==2.0.0+ubuntu0.20.4.3
+python-dateutil==2.8.1
+python-debian===0.1.36ubuntu1
 python-dotenv==0.15.0
-requests==2.25.1
-requests-oauthlib==1.3.0
-six==1.15.0
-SQLAlchemy==1.3.22
-urllib3==1.26.2
+python-xapp==2.0.1
+pytz==2020.4
+pyxdg==0.26
+PyYAML==5.3.1
+raven==6.10.0
+redis==3.3.11
+regex==2020.9.27
+reportlab==3.5.34
+requests==2.22.0
+requests-file==1.5.1
+requests-oauthlib==1.2.0
+requests-toolbelt==0.9.1
+requests-unixsocket==0.2.0
+rsa==4.0
+SecretStorage==2.3.1
+sentinels==1.0.0
+sentry-sdk==0.19.5
+setproctitle==1.1.10
+shortuuid==1.0.1
+simplejson==3.16.0
+six==1.12.0
+slackclient==2.3.1
+soupsieve==1.9.5
+South==1.0.2
+SQLAlchemy==1.3.6
+sqlparse==0.4.1
+systemd-python==234
+texttable==1.6.2
+timezonefinder==4.1.0
+toml==0.10.1
+typed-ast==1.4.1
+typing-extensions==3.7.4.3
+ubuntu-advantage-tools==20.3
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+uritemplate==3.0.0
+urllib3==1.25.3
 URLObject==2.4.3
-Werkzeug==1.0.1
+vine==1.3.0
+wadllib==1.3.3
+wcwidth==0.2.5
+websocket-client==0.53.0
+Werkzeug==0.15.5
+WTForms==2.2.1
+xkit==0.0.0
+xmltodict==0.12.0
+yarl==1.3.0
+zeep==4.0.0
+zeroconf==0.24.4
+zipp==1.0.0
